[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sprites/crazycars-mini-rock.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/crazycars-mini-shark.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/crazycars-mini-sausage.png" type="Texture" id=3]
[ext_resource path="res://scripts/microgames/entities/00_01_SmallCrazyCar.gd" type="Script" id=4]
[ext_resource path="res://scenes/util/AudioSpeedController.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/sfx/chirp.mp3" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 17 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 17 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 17 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 15, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 15, 0, 15, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 30, 0, 15, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 45, 0, 15, 8 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "rock",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "shark",
"speed": 12.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "sausage",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 5.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 10, 5.5 )

[node name="SmallCrazyCar" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "sausage"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -5.5 )
shape = SubResource( 12 )

[node name="SoundTriggerer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundTriggerer"]
position = Vector2( 0, -5.5 )
shape = SubResource( 13 )

[node name="AudioSpeedController" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 6 )
bus = "Microgame-SFX"
